[gd_scene load_steps=3 format=3 uid="uid://m0b4030kuc7w"]

[ext_resource type="Script" uid="uid://bifytg40iovy1" path="res://addons/gameAssetImporter/scenes/inputRecording/allRecord/totalRecorder.gd" id="1_yeyjj"]
[ext_resource type="PackedScene" uid="uid://dgbbi1pi4r8ap" path="res://addons/gameAssetImporter/scenes/inputRecording/mouseRecorder/mouseRecorder.tscn" id="2_dn3d3"]

[node name="TotalRecorder" type="Node"]
script = ExtResource("1_yeyjj")

[node name="mouseRecorder" parent="." instance=ExtResource("2_dn3d3")]
unique_name_in_owner = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Record" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Record
"

[node name="Save" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="Delete" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Delete"

[connection signal="visibility_changed" from="Control" to="." method="_on_control_visibility_changed"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/Record" to="." method="_on_record_toggled"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
